add live control panel

--- a/app/src/main/res/layout/item_event_result.xml
+++ b/app/src/main/res/layout/item_event_result.xml
@@ -1,36 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="12dp"
-    android:background="?attr/selectableItemBackground">
+    android:layout_marginBottom="12dp"
+    android:background="@drawable/bg_event_card"
+    android:padding="16dp">
 
+    <!-- Название события -->
     <TextView
         android:id="@+id/eventName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="Event Name"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/eventDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Date"
-        android:textSize="14sp"
-        android:textColor="#555555"
-        android:paddingTop="2dp"/>
+        android:layout_marginTop="6dp"
+        android:drawableStart="@drawable/i_calendar"
+        android:drawablePadding="10dp"
+        android:text="02/08/2025"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eventName" />
 
     <TextView
         android:id="@+id/participantsCount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Players Joined: 10"
-        android:textSize="14sp"
-        android:textColor="#777777"
-        android:paddingTop="2dp"/>
-</LinearLayout>
+        android:layout_marginTop="6dp"
+        android:drawableStart="@drawable/icon_team"
+        android:drawablePadding="10dp"
+        android:text="10"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eventDate" />
+
+    <TextView
+        android:id="@+id/place"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:drawableStart="@drawable/i_place"
+        android:drawablePadding="10dp"
+        android:text="Place"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/participantsCount" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/iconsLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/participantsCount">
+
+        <TextView
+            android:id="@+id/viewIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/i_view"
+            android:drawablePadding="10dp"
+            android:text="View Full Result"
+            android:textColor="#B0B3C7"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/exportIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_export"
+            android:drawablePadding="10dp"
+            android:text="Export"
+            android:textColor="#B0B3C7"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
