--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -14,10 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingBottom="8dp">
 
+        <!-- Заголовок -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,24 +25,36 @@
             android:textColor="@android:color/white"
             android:textSize="24sp" />
 
-        <ImageView
-            android:id="@+id/backButton"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_arrow_back" />
-    </LinearLayout>
+        <!-- Строка с кнопками назад и фильтр -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
 
-    <EditText
-        android:id="@+id/searchInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Search by name, date or players"
-        android:inputType="text"
-        android:drawableStart="@android:drawable/ic_menu_search"
-        android:padding="12dp"
-        android:background="@drawable/input_background"
-        />
+            <!-- Кнопка назад -->
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/ic_arrow_back" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <!-- Кнопка фильтра -->
+            <ImageView
+                android:id="@+id/filterButton"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/i_filter"
+                android:padding="8dp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsRecyclerView"
