--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -239,7 +239,7 @@
                     android:layout_gravity="bottom|start"
                     android:layout_marginStart="12dp"
                     android:layout_marginBottom="12dp"
-                    android:text="Open"
+                    android:text="My Events"
                     android:textColor="#3890F5"
                     android:textSize="20sp"/>
             </FrameLayout>
@@ -295,7 +295,7 @@
                     android:layout_gravity="bottom|start"
                     android:layout_marginStart="12dp"
                     android:layout_marginBottom="12dp"
-                    android:text="Manage"
+                    android:text="Manage Teams"
                     android:textColor="#3890F5"
                     android:textSize="20sp"/>
             </FrameLayout>
@@ -351,7 +351,7 @@
                     android:layout_gravity="bottom|start"
                     android:layout_marginStart="12dp"
                     android:layout_marginBottom="12dp"
-                    android:text="View Results"
+                    android:text="Event Results"
                     android:textColor="#3890F5"
                     android:textSize="20sp"/>
             </FrameLayout>
