--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,37 +20,33 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="HardcodedText" />
 
-    <!-- ViewPager2 -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/imageSlider"
         android:layout_width="0dp"
         android:layout_height="180dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="12dp"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Dots -->
     <LinearLayout
         android:id="@+id/sliderDots1"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_width="150dp"
         android:layout_height="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/imageSlider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Last Created Event -->
     <androidx.cardview.widget.CardView
         android:id="@+id/lastEventCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="12dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/sliderDots1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -61,7 +57,6 @@
             android:background="#1A2239"
             android:padding="16dp">
 
-            <!-- Заголовок -->
             <TextView
                 android:id="@+id/eventTitle"
                 android:layout_width="0dp"
@@ -77,7 +72,6 @@
                 android:layout_marginEnd="8dp"
                 tools:ignore="HardcodedText" />
 
-            <!-- Кнопка -->
             <Button
                 android:id="@+id/manageEventButton"
                 android:layout_width="wrap_content"
@@ -93,30 +87,27 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="HardcodedText" />
 
-            <!-- Дата -->
             <TextView
                 android:id="@+id/eventInfoDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="📅 01/08/2025"
                 android:textColor="#BBBBBB"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/eventTitle"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="8dp"
                 tools:ignore="HardcodedText" />
 
-            <!-- Участники -->
             <TextView
                 android:id="@+id/eventInfoPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="👥 12 / 20 Participants"
                 android:textColor="#BBBBBB"
+                android:layout_marginTop="4dp"
                 app:layout_constraintTop_toBottomOf="@id/eventInfoDate"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="4dp"
                 tools:ignore="HardcodedText" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -124,7 +115,7 @@
     <!-- Grid actions -->
     <GridLayout
         android:id="@+id/actionsGrid"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:columnCount="2"
@@ -134,9 +125,10 @@
 
         <!-- One item -->
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
-            android:layout_height="185dp"
-            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
@@ -190,9 +182,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
-            android:layout_height="185dp"
-            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
@@ -246,9 +239,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
-            android:layout_height="185dp"
-            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
@@ -302,9 +296,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
-            android:layout_height="185dp"
-            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
